--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-client": "openapi --input http://localhost:8000/openapi.json --output ./api_clients --client axios"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.0.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "axios": "^0.27.2",
     "framer-motion": "^6",
     "next": "12.1.6",
     "react": "18.1.0",
@@ -23,6 +25,7 @@
     "@types/react-dom": "18.0.4",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
+    "openapi-typescript-codegen": "^0.22.0",
     "typescript": "4.6.4"
   }
 }
