--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.0.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@react-google-maps/api": "^2.11.8",
     "axios": "^0.27.2",
     "framer-motion": "^6",
     "next": "12.1.6",
