--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "generate-client": "openapi --input http://localhost:8000/openapi.json --output ./api_clients --client axios"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.0.2",
+    "@chakra-ui/react": "1.8.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@react-google-maps/api": "^2.11.8",
     "axios": "^0.27.2",
-    "framer-motion": "^6",
+    "framer-motion": "4",
     "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "17.0.34",
