--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "generate-client": "openapi --input http://localhost:8000/openapi.json --output ./api_clients --client axios"
   },
   "dependencies": {
+    "@chakra-ui/icons": "1.1.7",
     "@chakra-ui/react": "1.8.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
@@ -18,7 +19,8 @@
     "framer-motion": "4",
     "next": "12.1.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-swipeable-views": "^0.14.0"
   },
   "devDependencies": {
     "@types/node": "17.0.34",
