--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "17.0.34",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
+    "@types/react-swipeable-views": "^0.13.1",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "openapi-typescript-codegen": "^0.22.0",
