--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "12.1.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-swipeable-views": "^0.14.0"
+    "react-swipeable-views": "^0.14.0",
+    "sharp": "^0.30.6"
   },
   "devDependencies": {
     "@types/node": "17.0.34",
