--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "framer-motion": "4",
     "next": "12.1.6",
+    "next-auth": "^4.9.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-swipeable-views": "^0.14.0",
