--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,9 @@
 # AUTH
-GITHUB_ID=
-GITHUB_SECRET=
+AUTH_GITHUB_ID=
+AUTH_GITHUB_SECRET=
+
+AUTH_GOOGLE_ID=
+AUTH_GOOGLE_SECRET=
 
 NEXTAUTH_SECRET=
 NEXTAUTH_URL=
