--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@emotion/styled": "^11",
     "@react-google-maps/api": "^2.11.8",
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "framer-motion": "4",
     "next": "12.1.6",
     "next-auth": "^4.9.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-swipeable-views": "^0.14.0",
-    "sharp": "^0.30.6"
+    "sharp": "^0.30.6",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.34",
