--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup env vars
         run: |
-          printf "${{secrets.BUILD_ENVIRONMENT_VARIABLES}} > .env.production
+          printf "${{secrets.BUILD_ENVIRONMENT_VARIABLES}}" > .env.production
       - name: Build the Docker image
         run: |
           sh manage.sh build
