--- a/.env.local.example
+++ b/.env.local.example
@@ -5,11 +5,11 @@ AUTH_GITHUB_SECRET=
 AUTH_GOOGLE_ID=
 AUTH_GOOGLE_SECRET=
 
-NEXTAUTH_SECRET=
-NEXTAUTH_URL=
+NEXTAUTH_SECRET=secret
+NEXTAUTH_URL=http://localhost:3000
 
 # Google maps
-GOOGLE_MAPS_API_KEY=
+GOOGLE_MAPS_API_KEY=AIzaSyDwEz0p4iWO4txzwR6rsCpYbEU5kVt0oD4
 
 REVALIDATE_PAGE_SECRET=revalidate-secret
 
